--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: "build|node_modules|.git/|.tox|staticfiles|static_files|media_files|((?:[^/]*/)*)(.svg)|((?:[^/]*/)*)(.xml)"
+exclude: ".venv/|.git/|.tox|((?:[^/]*/)*)(.svg)|((?:[^/]*/)*)(.xml)"
 default_stages: [commit]
 fail_fast: true
 default_language_version:
@@ -19,24 +19,23 @@ repos:
     hooks:
       - id: check-json5
 
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
       - id: black
         args: ["--line-length", "120"]
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.1
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
     hooks:
       - id: flake8
         args: ["--config=setup.cfg"]
         language_version: python3
-
-  - repo: https://github.com/timothycrosley/isort
-    rev: 5.0.9
-    hooks:
-      - id: isort
-        require_serial: true
 
   - repo: https://github.com/windpioneers/pre-commit-hooks
     rev: 0.0.5
