--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ packages = [{ include = "yewtail" },]
 Django = ">=3.0,<5"
 python = ">=3.9,<3.11"
 django-app-settings = "^0.7.1"
+django-gcp = "^0.7.3"
 
 [tool.poetry.dev-dependencies]
 coverage = "^6.2"
